# backtest-lab

./: LICENSE  README.md  pyproject.toml
examples/: momentum.py  quickstart.py  rebalancing.py  walk_forward.py
src/backtest_lab/: __init__.py  data.py  engine.py  metrics.py  portfolio.py  strategy.py  types.py
tests/: conftest.py  test_data.py  test_engine.py  test_metrics.py  test_portfolio.py  test_strategy.py
